# multi-language-translater

./: .env.local.example  .env.production  .gitignore  capacitor.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
android/app/: build.gradle
android/app/src/main/java/app/vercel/multi_language_translater/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/: globals.css  layout.tsx  page.tsx
app/api/translate/: route.ts
components/: AddLanguageButton.tsx  AudioOutputButton.tsx  LanguageSelect.tsx  PhoneticPanel.tsx  TranslationBlock.tsx  VoiceInputButton.tsx
hooks/: useAudioOutput.ts  usePhonetics.ts  useTranslator.ts  useVoiceInput.ts
lib/: libretranslate.ts  mymemory.ts  phoneticData.ts  phonetics.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
