[package]
name = "multi-language-translater"
version = "0.1.0"
description = "Multi-Language Translator desktop app"
authors = []
license = ""
repository = ""
default-run = "multi-language-translater"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
